Change the way g-menu slides.

--- a/app/assets/stylesheets/panels_view.scss
+++ b/app/assets/stylesheets/panels_view.scss
@@ -402,23 +402,18 @@ hr.md {
     background: #d2d2d2;
     border-radius: 5px;
     box-shadow: -3px 4px 3px -2px rgba(0, 0, 0, 0.16);
-    padding: 10px 0px 10px 10px;
-    z-index: 50;
     margin-bottom: 15px;
 }
 
 .g-menu {
-    background: #d2d2d2;
-    overflow: hidden;
-    padding: 0px;
-    width: 0px;
+    position: absolute;
+    top: 0;
+    right: 5px;
+    width: 45px;
     height: 90px;
-    position: relative;
-    left: 1 / 12 * 100%;
-    transform: translateX(-5px);
-    z-index: 1;
+    padding: 0 0 0 5px;
+    background: #d2d2d2;
     border-radius: 0px 5px 5px 0px;
-    box-shadow: -3px 4px 3px -2px rgba(0, 0, 0, 0.16);
     transition: all 0.3s ease-in-out;
 
     a {
@@ -426,20 +421,28 @@ hr.md {
     }
 }
 
-.g-menu::after {
-    content: "";
+.g-menu.out {
+    right: -45px;
+}
+
+.g-menu-shadow {
+    background: none;
     position: absolute;
-    top: 0;
+    width: 0%;
     height: 100%;
-    width: 5px;
-    border-right: thin solid $light_grey;
+    top: 0;
+    right: 0;
+    z-index: -1;
+    box-shadow: -3px 4px 3px -2px rgba(0, 0, 0, 0.16);
+    transition: width 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.g-menu-shadow.out {
+    width: 100%;
 }
 
 .g-menu ul {
     list-style: none;
-    position: relative;
-    left: -40px;
-    transition: all 0.3s ease-in-out;
     padding: 0px;
     margin: 0px;
     padding-left: 15px;
@@ -447,15 +450,6 @@ hr.md {
     li {
         padding-top: 3px;
     }
-}
-
-.g-menu.out ul {
-    left: 0px;
-    transition: all 0.3s ease-in-out;
-}
-
-.g-menu.out {
-    width: 45px;
 }
 
 .g-hide {
@@ -469,6 +463,7 @@ hr.md {
     width: 70px;
     height: 70px;
     background: #bdbdbd;
+    margin: 10px 0px 10px 10px;
 }
 
 .game-thumb {
@@ -479,6 +474,7 @@ hr.md {
     position: relative;
     width: 70px;
     height: 70px;
+    margin: 10px 0px 10px 10px;
     border-radius: 3px;
     background: #dddddd;
     box-shadow: inset -3px 4px 3px -2px rgba(0, 0, 0, 0.16);
@@ -509,7 +505,7 @@ hr.md {
 }
 
 .g-info {
-    padding-left: 10px;
+    padding: 10px;
     text-align: left;
 }
 
@@ -548,8 +544,10 @@ hr.md {
     font-size: 14px;
     font-style: italic;
     text-align: right;
-    padding-right: 15px;
-
+    padding: 10px 15px 10px 0px;
+    background: #d2d2d2;
+    border-radius: 0px 5px 5px 0px;
+    z-index: 1;
     p {
         margin: 0;
     }
@@ -565,6 +563,7 @@ hr.md {
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 2;
     border-radius: 5px;
     cursor: pointer;
 }
