--- a/app/assets/stylesheets/panels.scss
+++ b/app/assets/stylesheets/panels.scss
@@ -414,7 +414,7 @@ hr.md {
     padding: 0 0 0 5px;
     background: #d2d2d2;
     border-radius: 0px 5px 5px 0px;
-    transition: all 0.3s ease-in-out;
+    transition: right 0.3s ease-in-out;
 
     a {
         color: $light_grey;
@@ -445,7 +445,7 @@ hr.md {
     list-style: none;
     padding: 0px;
     margin: 0px;
-    padding-left: 15px;
+    padding-left: 12px;
 
     li {
         padding-top: 3px;
@@ -532,8 +532,6 @@ hr.md {
     margin: 0px;
     line-height: 21px;
     font-size: 12px;
-    // color: #929292;
-    // color: #666;
 }
 
 .g-nav ul {
@@ -546,11 +544,19 @@ hr.md {
     text-align: right;
     padding: 10px 15px 10px 0px;
     background: #d2d2d2;
+    border-right: 1px solid #d2d2d2;
     border-radius: 0px 5px 5px 0px;
     z-index: 1;
+    transition: border-radius 0.3s, border 0.3s;
+
     p {
         margin: 0;
     }
+}
+
+.g-right.out {
+    border-right: 1px solid #a7a7a7;
+    border-radius: 0px;
 }
 
 .g-drop {
