--- a/app/views/my_games/_panels.html.erb
+++ b/app/views/my_games/_panels.html.erb
@@ -19,7 +19,8 @@
     <div id="g-<%= id %>" class="g-panel uk-width-5-6 uk-grid-collapse" uk-grid>
         <%= content_tag(:div,nil, class: 'g-click', 'gameid': id) %>
         <%= get_game_thumb(game) %>
-        <div class="g-info uk-width-expand">
+        <div class="g-info uk-width-expand uk-grid-collapse" uk-grid>
+            <div class="hold-title uk-width-expand">
             <h4 class="g-title"><%= game.name %>
             <% if (status_id = game[:status]) && status_id != 0 %>
             <button class='gw-b'><%= convert_status(status_id) %></button>
@@ -30,16 +31,43 @@
             <%= content_tag(:span, "(#{ Time.at(game.first_release_date).year })", class: 'g-year') if game.first_release_date %>
             </h4>
             <%= content_tag(:p, 'by ' + game.developers.map(&:name).join(', '), class: 'g-by') unless game.developers.empty? %>
+            </div>
+
+                    <%= content_tag :div, id: "g-menu-#{ id }", class: "g-menu #{ extra }" do %>
+                    <ul >
+                    <li>
+                    <% if needs_platform %>
+                    <%= link_to('', edit_form_url(game_id: id, collection_id: collection.id, view: @view), id: "g-edit-#{ id }", class: 'uk-icon-link', remote: true, 'uk-icon': 'pencil', 'uk-tooltip' => "title: Edit; pos: right") %>
+                    <% else %>
+                    <%= content_tag(:a, '', class: 'uk-icon-link cf-disabled', 'uk-icon': 'pencil') %>
+                    <% end %>
+                    </li>
+                    <li>
+                    <%= link_to('', cm_form_url(game_id: id, collection_id: collection.id, view: @view), id: "g-copy-#{ id }", class: 'uk-icon-link', remote: true, 'uk-icon': 'copy', 'uk-tooltip' => "title: Copy / Move; pos: right") %>
+                    </li>
+                    <li>
+                    <%= link_to('', remove_url(game_id: id, collection_id: collection.id, view: @view), id: "g-delete-#{ id }", class: 'uk-icon-link', method: :delete, remote: true, 'uk-icon': 'trash', 'uk-tooltip': 'title: Delete; pos: right') %>
+                    </li>
+                    </ul>
+                    <%= content_tag :div,nil, class: "g-menu-shadow #{ extra }" %>
+                    <% end %>
+
+
+
+                    <%= content_tag :div, class: "g-right #{ extra }" do %>
+                    <div>
+                    <% if needs_platform %>
+                    <%= content_tag(:p, game.platform_name) %>
+                    <%= content_tag(:p, game.physical ? 'Physical' : 'Digital') %>
+                    <% end %>
+                    <%= content_tag(:div, game.created_at.to_date ,class: 'g-added normal') %>
+                    </div>
+                    <% end %>
+
+
+
+
         </div>
-        <%= content_tag :div, class: "g-right #{ extra }" do %>
-        <div>
-            <% if needs_platform %>
-            <%= content_tag(:p, game.platform_name) %>
-            <%= content_tag(:p, game.physical ? 'Physical' : 'Digital') %>
-            <% end %>
-            <%= content_tag(:div, game.created_at.to_date ,class: 'g-added normal') %>
-        </div>
-        <% end %>
         <div id="g-drop-<%= id %>" class="g-drop uk-width-1-1">
             <div class="uk-grid-collapse" uk-grid>
                 <div style="width: 80px;"></div>
@@ -75,24 +103,6 @@
         </div>
         <button id="g-hide-<%= id %>" class="g-hide uk-icon-link" uk-icon="chevron-up"></button>
     </div>
-    <%= content_tag :div, id: "g-menu-#{ id }", class: "g-menu #{ extra }" do %>
-    <ul >
-        <li>
-            <% if needs_platform %>
-            <%= link_to('', edit_form_url(game_id: id, collection_id: collection.id, view: @view), id: "g-edit-#{ id }", class: 'uk-icon-link', remote: true, 'uk-icon': 'pencil', 'uk-tooltip' => "title: Edit; pos: right") %>
-            <% else %>
-            <%= content_tag(:a, '', class: 'uk-icon-link cf-disabled', 'uk-icon': 'pencil') %>
-            <% end %>
-        </li>
-        <li>
-            <%= link_to('', cm_form_url(game_id: id, collection_id: collection.id, view: @view), id: "g-copy-#{ id }", class: 'uk-icon-link', remote: true, 'uk-icon': 'copy', 'uk-tooltip' => "title: Copy / Move; pos: right") %>
-        </li>
-        <li>
-            <%= link_to('', remove_url(game_id: id, collection_id: collection.id, view: @view), id: "g-delete-#{ id }", class: 'uk-icon-link', method: :delete, remote: true, 'uk-icon': 'trash', 'uk-tooltip': 'title: Delete; pos: right') %>
-        </li>
-    </ul>
-    <%= content_tag :div,nil, class: "g-menu-shadow #{ extra }" %>
-    <% end %>
 </div>
 <div id="copy-form-<%= id %>" class="copy-form" uk-dropdown="toggle: #g-copy-<%= id %>; mode: click; delay-hide: 100; boundary: #g-menu-<%= id %>; boundary-align: true; pos: right-top">
     Loading...
