--- a/app/assets/stylesheets/panels.scss
+++ b/app/assets/stylesheets/panels.scss
@@ -568,13 +568,12 @@ hr.md {
 }
 
 .g-click {
-    width: 100%;
-    height: 90px;
+    width: calc(100% + 80px);
+    height: 100%;
     position: absolute;
     top: 0;
-    left: 0;
+    left: -80px;
     z-index: 2;
-    border-radius: 5px;
     cursor: pointer;
 }
 
