--- a/app/views/my_games/_panels.html.erb
+++ b/app/views/my_games/_panels.html.erb
@@ -51,47 +51,41 @@
             <%= content_tag :div,nil, class: "g-menu-shadow #{ extra }" %>
             <% end %>
             <%= content_tag :div, class: "g-right #{ extra }" do %>
-            <div>
                 <% if needs_platform %>
                 <%= content_tag(:p, game.platform_name) %>
                 <%= content_tag(:p, game.physical ? 'Physical' : 'Digital') %>
                 <% end %>
-                <%= content_tag(:div, game.created_at.to_date ,class: 'g-added normal') %>
-            </div>
+                <%= content_tag(:p, game.created_at.to_date ,class: 'g-added') %>
             <% end %>
         </div>
         <div id="g-drop-<%= id %>" class="g-drop uk-width-1-1">
-            <div class="uk-grid-collapse" uk-grid>
-                <div style="width: 80px;"></div>
-                <div class="g-extra uk-width-expand">
-                    <% if screens = game[:screenshots] %>
-                    <% urls = screens_urls(screens) %>
-                    <div class="uk-position-relative pd-slide" uk-slideshow="animation: fade" uk-lightbox="toggle: .full-scrn; animation: fade">
-                        <div class="g-spin"><%= svg 'loading' %></div>
-                        <ul class="uk-slideshow-items pd-slide-items">
-                            <% urls.each do |url| %>
-                            <li>
-                                <%= image_tag('', 'data-src' => url[:small], alt: '', 'uk-cover': '', 'uk-img': '') %>
-                                <%= content_tag(:a, '', href: url[:big], class: 'full-scrn') %>
-                                <div class="shadow"></div>
-                            </li>
-                            <% end %>
-                        </ul>
-                        <a class="pd-arr left" href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
-                        <a class="pd-arr right" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
-                    </div>
-                    <% end %>
-                    <% if summary = get_summary(game, 280, 50) %>
-                    <p class="g-summary"><%= summary[:start] %><% if summary[:end] %><span class="dots" id="dots-<%= id %>"><%= summary[:span] %><button class="uk-icon-link uk-icon ms-b-down" onclick="shortSummary(<%= id %>)" uk-icon="icon: triangle-down"></button></span> <span id="more-<%= id %>" class="more"><%= summary[:end] %><button class="uk-icon-link uk-icon ms-b-up" onclick="shortSummary(<%= id %>)" uk-icon="icon: triangle-up"></button></span>
-                </p>
-                <% end %>
-                <% end %>
-                <div class="g-links uk-width-expand">
-                    <%= link_to '',"http://www.google.com/search?q=%22#{ game.name.gsub(' ', '+') }%22+video+game" , class: "ex-link g-google uk-icon-button uk-margin-small-right", target: "_blank", "uk-icon" => "google" %>
-                    <%= link_to svg('metacritic_icon'),"https://www.metacritic.com/search/game/#{ game.name.gsub(' ', '%20') }/results" , class: "ex-link g-metacritic uk-icon-button uk-margin-small-right", target: "_blank" %>
+            <div class="g-extra">
+                <% if screens = game[:screenshots] %>
+                <% urls = screens_urls(screens) %>
+                <div class="uk-position-relative pd-slide" uk-slideshow="animation: fade" uk-lightbox="toggle: .full-scrn; animation: fade">
+                    <div class="g-spin"><%= svg 'loading' %></div>
+                    <ul class="uk-slideshow-items pd-slide-items">
+                        <% urls.each do |url| %>
+                        <li>
+                            <%= image_tag('', 'data-src' => url[:small], alt: '', 'uk-cover': '', 'uk-img': '') %>
+                            <%= content_tag(:a, '', href: url[:big], class: 'full-scrn') %>
+                            <div class="shadow"></div>
+                        </li>
+                        <% end %>
+                    </ul>
+                    <a class="pd-arr left" href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
+                    <a class="pd-arr right" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
                 </div>
+                <% end %>
+                <% if summary = get_summary(game, 280, 50) %>
+                <p class="g-summary"><%= summary[:start] %><% if summary[:end] %><span class="dots" id="dots-<%= id %>"><%= summary[:span] %><button class="uk-icon-link uk-icon ms-b-down" onclick="shortSummary(<%= id %>)" uk-icon="icon: triangle-down"></button></span> <span id="more-<%= id %>" class="more"><%= summary[:end] %><button class="uk-icon-link uk-icon ms-b-up" onclick="shortSummary(<%= id %>)" uk-icon="icon: triangle-up"></button></span>
+            </p>
+            <% end %>
+            <% end %>
+            <div class="g-links">
+                <%= link_to '',"http://www.google.com/search?q=%22#{ game.name.gsub(' ', '+') }%22+video+game" , class: "ex-link g-google uk-icon-button uk-margin-small-right", target: "_blank", "uk-icon" => "google" %>
+                <%= link_to svg('metacritic_icon'),"https://www.metacritic.com/search/game/#{ game.name.gsub(' ', '%20') }/results" , class: "ex-link g-metacritic uk-icon-button uk-margin-small-right", target: "_blank" %>
             </div>
-            <div style="width: 80px;"></div>
         </div>
         <button id="g-hide-<%= id %>" class="g-hide uk-icon-link" uk-icon="chevron-up"></button>
     </div>
