Fix game cover shadow in view game info modal (list view) after image is loaded.

--- a/app/views/games/table_show.js.erb
+++ b/app/views/games/table_show.js.erb
@@ -1,1 +1,2 @@
 $(".t-game-show .modal-content").html("<%= j(render partial: 'my_games/table_show', locals: { game: @game }) %>");
+presentShadow();
