--- a/app/assets/stylesheets/covers.scss
+++ b/app/assets/stylesheets/covers.scss
@@ -29,6 +29,9 @@
 
 .c-cover {
     margin: 20px 0px 10px;
+    background: #393939;
+    border-radius: 3px;
+    position: relative;
 }
 
 .game-name, .c-game-name {
@@ -89,6 +92,9 @@
         color: #969696;
         font-size: 13px;
         transition: color 0.2s ease-in-out, border 0.2s ease-in-out;
+
+    &:focus {
+        outline: none; }
     }
 }
 
@@ -204,9 +210,11 @@
 
 .game-cover {
     border-radius: 3px;
+    position: relative;
 }
 
 .game-cover-effect {
+    display: block;
     position: relative;
     transition-duration: 0.3s;
     background: #bababa;
@@ -216,15 +224,15 @@
 
     img {
         height: inherit;
-        position: relative;
     }
 }
 
 .spinner {
     position: absolute;
-    width: 100%;
-    height: 50%;
-    bottom: 25px;
+    top: 50%;
+    left: 50%;
+    margin-left: -25px;
+    margin-top: -25px;
 }
 
 .spinner svg {
