--- a/app/views/cover_view/_game_info.html.erb
+++ b/app/views/cover_view/_game_info.html.erb
@@ -66,7 +66,7 @@
             <% no_of_screens = 0 %>
             <% urls.each do |url| %>
             <li>
-                <%= image_tag('', 'data-src' => url[:small], 'uk-cover' => '', 'uk-img': '') %>
+                <%= image_tag('', alt: '', 'data-src' => url[:small], 'uk-cover' => '', 'uk-img': '') %>
                 <%= content_tag(:a, '', href: url[:big], class: 'uk-position-cover') %>
             </li>
             <% no_of_screens += 1 %>
