Add game's platforms to game panels.

--- a/app/views/my_games/_panels.html.erb
+++ b/app/views/my_games/_panels.html.erb
@@ -82,6 +82,9 @@
             </p>
             <% end %>
             <% end %>
+            <% if platforms = game[:platforms_names] %>
+                <p class="g-platforms">Platforms: <%= platforms.join(', ') %></p>
+            <% end %>
             <div class="g-links">
                 <%= link_to '',"http://www.google.com/search?q=%22#{ game.name.gsub(' ', '+') }%22+video+game" , class: "ex-link g-google uk-icon-button uk-margin-small-right", target: "_blank", "uk-icon" => "google" %>
                 <%= link_to svg('metacritic_icon'),"https://www.metacritic.com/search/game/#{ game.name.gsub(' ', '%20') }/results" , class: "ex-link g-metacritic uk-icon-button uk-margin-small-right", target: "_blank" %>
