--- a/app/assets/stylesheets/panels.scss
+++ b/app/assets/stylesheets/panels.scss
@@ -1,3 +1,10 @@
+.g-platforms {
+    font-size: 12px;
+    color: #666;
+    margin: 9px 0 0;
+    line-height: 15px;
+}
+
 .container {
     color: $light_grey;
     cursor: pointer;
@@ -400,6 +407,7 @@ hr.md {
     background: #d2d2d2;
     box-shadow: -3px 4px 3px -2px rgba(0, 0, 0, 0.16);
     margin: 0px auto 15px;
+    position: relative;
 }
 
 .g-menu {
@@ -592,6 +600,7 @@ hr.md {
 
 .g-summary {
     font-size: 14px;
+    color: #333333;
     text-align: justify;
     margin: 0px;
     line-height: 27px;
