Fix problem when adding games and removing games (from search page) when there are duplicates of the same game (possible in character or developer search).

--- a/app/assets/stylesheets/covers.scss
+++ b/app/assets/stylesheets/covers.scss
@@ -1,5 +1,5 @@
 .shr {
-    border-color: #bababa;
+    border-top: thin solid #bababa;
     width: 150px;
     margin: 0 auto 5px;
     transition: width 0.3s;
