--- a/app/views/cover_view/_already_in.html.erb
+++ b/app/views/cover_view/_already_in.html.erb
@@ -9,14 +9,14 @@
         <% g.each do |game| %>
         <li class="ai-game">
           - <%= game.platform_name %> (<%= game.physical ? 'Physical' : 'Digital' %>)
-          <%= link_to '', remove_s_url(game_id: game.id, collection_id: c.id),
+          <%= link_to '', remove_s_url(game_id: game.id, collection_id: c.id, x_id: x_id),
           class: 'uk-icon-link acf-remove', method: :delete, remote: true, 'uk-icon' => 'icon: trash; ratio: 0.8' %>
         </li>
         <% end %>
       </ul>
     <% else %>
       <p class="ai-coll">in <%= c.name %>:
-        <%= link_to '', remove_s_url(game_id: g.first.id, collection_id: c.id),
+        <%= link_to '', remove_s_url(game_id: g.first.id, collection_id: c.id, x_id: x_id),
           class: 'uk-icon-link acf-remove', method: :delete, remote: true, 'uk-icon' => 'icon: trash; ratio: 0.8' %>
       </p>
     <% end %>
